set initial focus and fix suggestion wrapping

--- a/src/app/suggestion/suggestion.component.scss
+++ b/src/app/suggestion/suggestion.component.scss
@@ -10,6 +10,7 @@ button {
   background-color: transparent;
   padding: 0;
   text-align: left;
+  white-space: initial;
 
   fieldset {
     border: 2px solid t.$secondary;
